--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
   - cd ../src/Extensions/JavaScript
   - npm install
   - tsc
-  - ../../../bin/l10ns extension-run-tests
+  - ../../../bin/lya extension-run-tests
 
 git:
 
