--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ compiler:
 script:
   - mkdir debug && cd debug
   - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
-  - ../bin/run-tests
+  - make run-tests
   - cd ../src/Extensions/JavaScript
   - npm install
   - tsc
@@ -26,12 +26,6 @@ before_install:
   - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
   - git submodule update --init --recursive
 
-  # nodejs
-  - curl -sL https://deb.nodesource.com/setup_7.x | sudo bash
-  - sudo apt-get update -y
-  - sudo apt-get install nodejs
-  - sudo npm install typescript tslint -g
-
   # libmicrohttpd
   - curl -O http://ftp.gnu.org/gnu/libmicrohttpd/libmicrohttpd-0.9.52.tar.gz
   - tar -xvf libmicrohttpd-0.9.52.tar.gz
@@ -39,24 +33,6 @@ before_install:
   - ./configure && make
   - sudo make install && sudo ldconfig
   - cd .. && sudo rm -rf libmicrohttpd-0.9.52
-
-  # jsoncpp
-  - git clone git://github.com/open-source-parsers/jsoncpp.git
-  - mkdir -p jsoncpp/build
-  - cd jsoncpp/build
-  - cmake -DCMAKE_BUILD_TYPE=debug -DCMAKE_CXX_FLAGS=-fPIC -DBUILD_STATIC_LIBS=ON -DBUILD_SHARED_LIBS=OFF -DARCHIVE_INSTALL_DIR=. -G "Unix Makefiles" ..
-  - make
-  - sudo make install && sudo ldconfig
-  - cd ../../ && rm -rf jsoncpp
-
-  # libjson-rpc-cpp
-  - git clone git://github.com/tinganho/libjson-rpc-cpp.git
-  - mkdir -p libjson-rpc-cpp/build
-  - cd libjson-rpc-cpp/build
-  - cmake -DCMAKE_BUILD_TYPE=Debug -DHTTP_CLIENT=YES -DHTTP_SERVER=YES -DCOMPILE_STUBGEN=YES ..
-  - make
-  - sudo make install && sudo ldconfig
-  - cd ../../ && rm -rf libjson-rpc-cpp
 
 matrix:
   include:
