--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 
 # See: https://stackoverflow.com/questions/6468681/failed-linking-to-boost-library-with-cmake-generated-project-file-for-msvc9
-add_definitions( -DBOOST_ALL_NO_LIB )
+add_definitions(-DBOOST_ALL_NO_LIB)
 set(Boost_USE_STATIC_LIBS ON)
 
 configure_file(${PROJECT_SOURCE_DIR}/src/Program/Configurations.h.in ${PROJECT_SOURCE_DIR}/src/Program/Configurations.h)
@@ -16,15 +16,19 @@ set(Boost_DEBUG on)
 find_package(Boost 1.64 COMPONENTS system filesystem regex REQUIRED)
 
 add_subdirectory(third_party/glob)
-add_subdirectory(third_party/grpc)
 add_subdirectory(third_party/jsoncpp)
 
-include_directories("${PROJECT_SOURCE_DIR}/src/Program")
-include_directories("${PROJECT_SOURCE_DIR}/src/TestFramework")
-include_directories("${PROJECT_SOURCE_DIR}/third_party/glob")
+include_directories(
+    src/TestFramework
+    src/Program
+    third_party/glob
+)
 
+set(PROTOCOL_BUFFERS_DIR ${CMAKE_SOURCE_DIR}/src/Program/ProtocolBuffers)
+file(GLOB PROTOBUFS_SRC ${CMAKE_SOURCE_DIR}/src/Program/ProtocolBuffers/Build/*.cc)
 add_executable(lya ${PROJECT_SOURCE_DIR}/src/Program/Exec.cpp)
-
+add_executable(lya-server ${PROTOCOL_BUFFERS_DIR}/LyaServer.cpp)
+add_executable(lya-client ${PROTOCOL_BUFFERS_DIR}/LyaClient.cpp ${PROTOBUFS_SRC})
 add_executable(internal-accept-baseline ${PROJECT_SOURCE_DIR}/tasks/AcceptBaseline.cpp)
 add_executable(internal-clean-project ${PROJECT_SOURCE_DIR}/tasks/Clean.cpp)
 add_executable(internal-diff ${PROJECT_SOURCE_DIR}/tasks/Diff.cpp)
@@ -33,20 +37,25 @@ add_executable(internal-run-tests ${PROJECT_SOURCE_DIR}/src/TestFramework/Exec.c
 
 target_link_libraries(lya glob jsoncpp curl ${Boost_LIBRARIES})
 
+find_library(LIB_PROTOBUF NAMES protobuf libprotobuf.a)
+MESSAGE(STATUS "lib-proto=${LIB_PROTOBUF}")
+target_link_libraries(lya-client grpc++ protobuf)
+
 target_link_libraries(internal-accept-baseline glob ${Boost_LIBRARIES})
 target_link_libraries(internal-clean-project glob ${Boost_LIBRARIES})
 target_link_libraries(internal-diff glob ${Boost_LIBRARIES})
 target_link_libraries(internal-generate-diagnostics glob jsoncpp ${Boost_LIBRARIES})
 target_link_libraries(internal-run-tests glob ${Boost_LIBRARIES})
 
-list(APPEND PROTOBUFS_SRC
-    LyaSync.proto
-)
+file(GLOB PROTOS ${CMAKE_SOURCE_DIR}/src/Program/ProtocolBuffers/*.proto)
 
-file(MAKE_DIRECTORY ${CMAKE_SOURCE_DIR}/src/Program/ProtocolBuffers/Build)
-
+message(STATUS "protos=${PROTOS}")
 add_custom_target(
-    generate-protobufs ../../../bin/protoc --cpp_out=Build ${PROTOBUFS_SRC}
+    generate-protobufs
+    COMMAND rm -r ${CMAKE_SOURCE_DIR}/src/Program/ProtocolBuffers/Build
+    COMMAND mkdir -p ${CMAKE_SOURCE_DIR}/src/Program/ProtocolBuffers/Build
+    COMMAND protoc -I${CMAKE_SOURCE_DIR}/src/Program/ProtocolBuffers --plugin=protoc-gen-grpc=`which grpc_cpp_plugin` --grpc_out=Build ${PROTOS}
+    COMMAND protoc -I${CMAKE_SOURCE_DIR}/src/Program/ProtocolBuffers --cpp_out=Build ${PROTOS}
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src/Program/ProtocolBuffers
 )
 
