--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 .idea
 .vscode
 .vs
+bin/
+cmake-build-debug/
 debug/
 release/
-bin/
 src/Program/Configurations.h
 src/Vendors/*/Makefile
 src/Vendors/Glob/libglob.a
