--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,8 +25,8 @@ find_package(Boost 1.64 COMPONENTS system filesystem regex REQUIRED)
 include_directories(
     src/program
     src/extensions
-    src/test/runners
-    src/ProtocolBuffers
+    src/test_runners
+    src/protocol_buffers/output
     third_party/grpc/include
     third_party/grpc/third_party/protobuf/src
     third_party/glob
@@ -37,25 +37,27 @@ add_subdirectory(third_party/glob)
 add_subdirectory(third_party/jsoncpp EXCLUDE_FROM_ALL)
 add_subdirectory(third_party/grpc EXCLUDE_FROM_ALL)
 
-set(PROGRAM_DIR ${CMAKE_SOURCE_DIR}/src/Program)
-set(EXTENSIONS_DIR ${CMAKE_SOURCE_DIR}/src/Extensions)
-set(PROTOCOL_BUFFERS_DIR ${CMAKE_SOURCE_DIR}/src/ProtocolBuffers)
-set(TEST_FRAMEWORK_DIR ${CMAKE_SOURCE_DIR}/src/TestFramework)
+set(PROGRAM_DIR ${CMAKE_SOURCE_DIR}/src/program)
+set(SERVICES_DIR ${CMAKE_SOURCE_DIR}/src/services)
+set(EXTENSIONS_DIR ${CMAKE_SOURCE_DIR}/src/extensions)
+set(PROTOCOL_BUFFERS_DIR ${CMAKE_SOURCE_DIR}/src/protocol_buffers)
+set(TEST_RUNNERS_DIR ${CMAKE_SOURCE_DIR}/src/test_runners)
 
-set(JAVASCRIPT_EXTENSION_DIR ${EXTENSIONS_DIR}/JavaScript)
+set(JAVASCRIPT_EXTENSION_DIR ${EXTENSIONS_DIR}/javascript)
 
 file(GLOB PROTOBUFS_SRC
-    ${PROTOCOL_BUFFERS_DIR}/Build/*.cc
-    ${PROTOCOL_BUFFERS_DIR}/Build/*.h)
+    ${PROTOCOL_BUFFERS_DIR}/output/*.cc
+    ${PROTOCOL_BUFFERS_DIR}/output/*.h)
 
 file(GLOB EXTENSION_SERVER_SRC
-    ${EXTENSIONS_DIR}/Server/*.cpp
-    ${EXTENSIONS_DIR}/Server/*.h)
+    ${SERVICES_DIR}/extension_server/*.cpp
+    ${SERVICES_DIR}/extension_server/*.h)
 
 file(GLOB EXTENSION_JAVASCRIPT_SRC
-    ${EXTENSIONS_DIR}/JavaScript/*.cpp
-    ${EXTENSIONS_DIR}/JavaScript/*.h
-    ${EXTENSIONS_DIR}/JavaScript/Extension.json)
+    ${EXTENSIONS_DIR}/javascript/*.cpp
+    ${EXTENSIONS_DIR}/javascript/*.h
+    ${EXTENSIONS_DIR}/javascript/javascript/extension.json
+    ${EXTENSIONS_DIR}/javascript/typescript/extension.json)
 
 file(GLOB PROGRAM_SRC
     ${PROGRAM_DIR}/*.cpp
@@ -63,21 +65,27 @@ file(GLOB PROGRAM_SRC
     ${PROGRAM_DIR}/*.in
     ${PROGRAM_DIR}/*.json)
 
+file(GLOB TEST_RUNNERS_SRC
+    ${TEST_RUNNERS_DIR}/definitions.h
+    ${TEST_RUNNERS_DIR}/definitions.cpp
+    ${TEST_RUNNERS_DIR}/project_test_runner.h
+    ${TEST_RUNNERS_DIR}/project_test_runner.cpp)
+
 add_executable(lya
     ${PROGRAM_SRC}
-    ${TEST_FRAMEWORK_DIR}/Core.cpp
-    ${PROTOBUFS_SRC} src/program/text_writer.cpp src/program/text_writer.h src/program/text_annotater.cpp src/program/text_annotater.h)
+    ${PROTOBUFS_SRC}
+    ${TEST_RUNNERS_SRC})
 
 add_executable(lya-extension-javascript
-    ${JAVASCRIPT_EXTENSION_DIR}/JavaScript/JavaScript.cpp
-    ${PROGRAM_DIR}/Utils.cpp
+    ${JAVASCRIPT_EXTENSION_DIR}/javascript/javascript.cpp
+    ${PROGRAM_DIR}/utils.cpp
     ${EXTENSION_SERVER_SRC}
     ${EXTENSION_JAVASCRIPT_SRC}
     ${PROTOBUFS_SRC})
 
 add_executable(lya-extension-typescript
-    ${JAVASCRIPT_EXTENSION_DIR}/TypeScript/TypeScript.cpp
-    ${PROGRAM_DIR}/Utils.cpp
+    ${JAVASCRIPT_EXTENSION_DIR}/typescript/typescript.cpp
+    ${PROGRAM_DIR}/utils.cpp
     ${EXTENSION_SERVER_SRC}
     ${EXTENSION_JAVASCRIPT_SRC}
     ${PROTOBUFS_SRC})
@@ -85,25 +93,25 @@ add_executable(lya-extension-typescript
 source_group("Extension\\JavaScript" FILES ${EXTENSION_JAVASCRIPT_SRC})
 source_group("Extension\\Server" FILES ${EXTENSION_SERVER_SRC})
 source_group("ProtocolBuffers" FILES ${PROTOBUFS_SRC})
-source_group("Program" FILES ${PROGRAM_DIR}/Utils.cpp)
+source_group("Program" FILES ${PROGRAM_DIR}/utils.cpp)
 
-add_executable(internal-accept-baseline ${PROJECT_SOURCE_DIR}/tasks/AcceptBaseline.cpp ${Boost_LIBRARIES})
-add_executable(internal-clean-project ${PROJECT_SOURCE_DIR}/tasks/Clean.cpp)
-add_executable(internal-diff ${PROJECT_SOURCE_DIR}/tasks/Diff.cpp)
-add_executable(internal-generate-diagnostics ${PROJECT_SOURCE_DIR}/tasks/GenerateDiagnostics.cpp)
-add_executable(internal-generate-javascript-diagnostics ${PROJECT_SOURCE_DIR}/tasks/GenerateJavaScriptDiagnostics.cpp)
-add_executable(internal-run-tests ${PROJECT_SOURCE_DIR}/src/TestFramework/Exec.cpp)
+add_executable(internal-accept-baseline ${PROJECT_SOURCE_DIR}/tasks/accept_baseline.cpp ${Boost_LIBRARIES})
+add_executable(internal-clean-project ${PROJECT_SOURCE_DIR}/tasks/clean.cpp)
+add_executable(internal-diff ${PROJECT_SOURCE_DIR}/tasks/diff.cpp)
+add_executable(internal-generate-diagnostics ${PROJECT_SOURCE_DIR}/tasks/generate_diagnostics.cpp)
+add_executable(internal-generate-javascript-diagnostics ${PROJECT_SOURCE_DIR}/tasks/generate_javascript_diagnostics.cpp)
+add_executable(internal-run-tests ${PROJECT_SOURCE_DIR}/src/test_runners/program.cpp)
 
 set_target_properties(
     lya-extension-javascript
     PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY "${EXTENSIONS_DIR}/JavaScript/JavaScript/bin"
+    RUNTIME_OUTPUT_DIRECTORY "${EXTENSIONS_DIR}/javascript/javascript/bin"
 )
 
 set_target_properties(
     lya-extension-typescript
     PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY "${EXTENSIONS_DIR}/JavaScript/Typescript/bin"
+    RUNTIME_OUTPUT_DIRECTORY "${EXTENSIONS_DIR}/javascript/typescript/bin"
 )
 
 target_link_libraries(lya glob jsoncpp_lib_static curl grpc++ grpc ${Boost_LIBRARIES})
@@ -115,14 +123,14 @@ target_link_libraries(internal-generate-diagnostics glob jsoncpp_lib_static ${Bo
 target_link_libraries(internal-generate-javascript-diagnostics glob jsoncpp_lib_static ${Boost_LIBRARIES})
 target_link_libraries(internal-run-tests glob jsoncpp_lib_static ${Boost_LIBRARIES})
 
-file(GLOB PROTOS ${CMAKE_SOURCE_DIR}/src/ProtocolBuffers/*.proto)
+file(GLOB PROTOS ${CMAKE_SOURCE_DIR}/src/protocol_buffers/*.proto)
 
 add_custom_target(
     generate-protobufs
-    COMMAND rm -r ${CMAKE_SOURCE_DIR}/src/protocol_buffers/build
-    COMMAND mkdir -p ${CMAKE_SOURCE_DIR}/src/protocol_buffers/build
-    COMMAND ${CMAKE_SOURCE_DIR}/bin/protoc -I${CMAKE_SOURCE_DIR}/src/protocol_buffers --plugin=protoc-gen-grpc=${CMAKE_SOURCE_DIR}/bin/grpc_cpp_plugin --grpc_out=build ${PROTOS}
-    COMMAND ${CMAKE_SOURCE_DIR}/bin/protoc -I${CMAKE_SOURCE_DIR}/src/protocol_buffers --cpp_out=Build ${PROTOS}
+    COMMAND rm -rf ${CMAKE_SOURCE_DIR}/src/protocol_buffers/output
+    COMMAND mkdir -p ${CMAKE_SOURCE_DIR}/src/protocol_buffers/output
+    COMMAND ${CMAKE_SOURCE_DIR}/bin/protoc -I${CMAKE_SOURCE_DIR}/src/protocol_buffers --plugin=protoc-gen-grpc=${CMAKE_SOURCE_DIR}/bin/grpc_cpp_plugin --grpc_out=output ${PROTOS}
+    COMMAND ${CMAKE_SOURCE_DIR}/bin/protoc -I${CMAKE_SOURCE_DIR}/src/protocol_buffers --cpp_out=output ${PROTOS}
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src/protocol_buffers
     DEPENDS protoc grpc_cpp_plugin
 )
