--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "third_party/jsoncpp"]
 	path = third_party/jsoncpp
 	url = git@github.com:open-source-parsers/jsoncpp.git
+[submodule "third_party/zlib"]
+	path = third_party/zlib
+	url = git@github.com:madler/zlib.git
